a11/ops/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: funesterie
  labels:
    app.kubernetes.io/part-of: funesterie
